# Hospital-Management-System

./: CMakeLists.txt  CareGivingEmployee.h  Doctor.h  Employee.h  Hospital Management System.cbp  Hospital Management System.depend  Hospital Management System.layout  Hospital.h  Nurse.h  Patient.h  Person.h  Researcher.h  Researching Doctor.h  Surgeon.h  careGivingEmployee.h  department.h  doctor.h  employee.h  inspection.h  main.cpp  nurse.h  patient.h  person.h  researcher.h  researchingDoctor.h  surgeon.h  surgery.h  surgeryType.h  visit.h
